[package]
name = "pihole_api"
version = "0.1.0"
authors = ["Mcat12 <mark@pi-hole.net>"]
description = "Work in progress HTTP API for Pi-hole."
homepage = "https://pi-hole.net"
repository = "https://github.com/pi-hole/api"
readme = "README.md"
license = "EUPL-1.2"
publish = false
edition = "2021"

[profile.release]
lto = true

[dependencies]
diesel = { version = "1.4", features = ["sqlite"]}
rocket = "0.4"
rocket_cors = { version = "0.4", default-features = false }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rmp = "0.8.0"
regex = "1.0.0"
rust-embed = "4.3"
toml = "0.4"
failure = "0.1.1"
failure_derive = "0.1.1"
hostname = "0.1.5"
tempfile = "3.0.2"
get_if_addrs = "0.5.3"
shmem = "0.2.0"
libc = "0.2"
nix = "0.13"
base64 = "0.10"
task_scheduler = "0.2.0"
reqwest = { version = "0.10", features = ["json"] }
uuid = { version = "1.8", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
ldap3 = "0.6"
sxd-document = "0.3.2"
sxd-xpath = "0.4.2"
mysql_async = "0.32"

[dependencies.rocket_contrib]
version = "0.4"
features = ["diesel_sqlite_pool"]

[dev-dependencies]
serde_json = "1.0"
